fix(scheduler): various layout issues

--- a/packages/bootstrap/scss/scheduler/_theme.scss
+++ b/packages/bootstrap/scss/scheduler/_theme.scss
@@ -23,10 +23,14 @@
 
     // Header and footer
     .k-scheduler-toolbar,
-    .k-scheduler-footer {
+    .k-scheduler-footer,
+    .k-scheduler-header {
         @include appearance( header );
     }
 
+    .k-scheduler-header-wrap {
+        background-color: $bg-color;
+    }
 
     //Scheduler navigation
     .k-scheduler-navigation {
@@ -145,6 +149,22 @@
     .k-scheduler-marquee::before,
     .k-scheduler-marquee::after {
         border-color: $primary-button-border;
+    }
+
+
+     // Agenda view
+     .k-scheduler-agendaview {
+
+        tr.k-state-hover,
+        .k-scheduler-content tr:hover {
+            @include appearance( hovered-node );
+        }
+
+        tr.k-state-hover .k-scheduler-datecolumn,
+        tr:hover .k-scheduler-datecolumn,
+        tr:hover .k-scheduler-groupcolumn {
+            @include appearance( panel );
+        }
     }
 
 }
