--- a/packages/material/scss/scheduler/_theme.scss
+++ b/packages/material/scss/scheduler/_theme.scss
@@ -25,10 +25,14 @@
 
     // Header and footer
     .k-scheduler-toolbar,
-    .k-scheduler-footer {
+    .k-scheduler-footer,
+    .k-scheduler-header {
         @include appearance( toolbar );
     }
 
+    .k-scheduler-header-wrap {
+        background-color: $bg-color;
+    }
 
     //Scheduler navigation
     .k-scheduler-navigation {}
@@ -141,10 +145,14 @@
     // Agenda view
     .k-scheduler-agendaview {
 
-        tr.k-state-hover {
+        tr.k-state-hover,
+        .k-scheduler-content tr:hover {
             @include appearance( hovered-node );
         }
-        tr.k-state-hover .k-scheduler-datecolumn {
+
+        tr.k-state-hover .k-scheduler-datecolumn,
+        tr:hover .k-scheduler-datecolumn,
+        tr:hover .k-scheduler-groupcolumn {
             @include appearance( panel );
         }
     }
